fix-rides-passenger-payment