@@ -9,24 +9,37 @@ import rides_service.rides_service.dto.ride.RideListResponseDto;
 import rides_service.rides_service.dto.ride.RideRequestDto;
 import rides_service.rides_service.dto.ride.RideResponseDto;
 import rides_service.rides_service.entity.Ride;
+import rides_service.rides_service.entity.Route;
 import rides_service.rides_service.exception.ride.RideNotFoundException;
+import rides_service.rides_service.exception.route.RouteNotFoundException;
 import rides_service.rides_service.repository.RideRepository;
+import rides_service.rides_service.repository.RouteRepository;
 import rides_service.rides_service.service.api.RideService;
 
 import java.util.List;
 import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class RideServiceImpl implements RideService {
 
     private final RideRepository rideRepository;
+    private final RouteRepository routeRepository;
     private final DtoMapper mapper;
 
     @Override
     public RideResponseDto createRide(RideRequestDto rideRequestDto) {
-        Ride ride = mapper.convertToEntity(rideRequestDto, Ride.class);
+        Route route = routeRepository.findById(rideRequestDto.getRouteId())
+                .orElseThrow(() -> new RouteNotFoundException("Route not found"));
+
+        Ride ride = new Ride();
+        ride.setDriverId(rideRequestDto.getDriverId());
+        ride.setPassengerId(rideRequestDto.getPassengerId());
+        ride.setRoute(route);
+        ride.setStartTime(rideRequestDto.getStartTime());
+        ride.setEndTime(rideRequestDto.getEndTime());
+        ride.setStatus(rideRequestDto.getStatus());
+
         Ride savedRide = rideRepository.save(ride);
         return mapper.convertToDto(savedRide, RideResponseDto.class);
     }
@@ -34,7 +47,7 @@ public class RideServiceImpl implements RideService {
     @Override
     public RideResponseDto getRideById(Long id) {
         Ride ride = rideRepository.findById(id)
-                .orElseThrow(() -> new RideNotFoundException(String.format("Ride not found with id: " + id)));
+                .orElseThrow(() -> new RideNotFoundException("Ride not found with id: " + id));
         return mapper.convertToDto(ride, RideResponseDto.class);
     }
 
@@ -42,8 +55,8 @@ public class RideServiceImpl implements RideService {
     public RideListResponseDto getAllRides() {
         List<Ride> rides = rideRepository.findAll();
         List<RideResponseDto> rideResponseDtos = rides.stream()
-                .map(payment -> mapper.convertToDto(payment, RideResponseDto.class))
-                .toList();
+                .map(ride -> mapper.convertToDto(ride, RideResponseDto.class))
+                .collect(Collectors.toList());
 
         return RideListResponseDto.builder()
                 .ride(rideResponseDtos)
@@ -53,17 +66,17 @@ public class RideServiceImpl implements RideService {
     @Override
     public RideResponseDto updateRide(Long id, RideRequestDto rideRequestDto) {
         Ride existingRide = rideRepository.findById(id)
-                .orElseThrow(() -> new RideNotFoundException(String.format("Ride not found with id: " + id)));
+                .orElseThrow(() -> new RideNotFoundException("Ride not found with id: " + id));
+
+        Route route = routeRepository.findById(rideRequestDto.getRouteId())
+                .orElseThrow(() -> new RouteNotFoundException("Route not found"));
 
         existingRide.setDriverId(rideRequestDto.getDriverId());
         existingRide.setPassengerId(rideRequestDto.getPassengerId());
-        existingRide.setStartAddress(rideRequestDto.getStartAddress());
-        existingRide.setEndAddress(rideRequestDto.getEndAddress());
+        existingRide.setRoute(route);
         existingRide.setStartTime(rideRequestDto.getStartTime());
         existingRide.setEndTime(rideRequestDto.getEndTime());
         existingRide.setStatus(rideRequestDto.getStatus());
-        existingRide.setDistance(rideRequestDto.getDistance());
-        existingRide.setEstimatedTime(rideRequestDto.getEstimatedTime());
 
         Ride updatedRide = rideRepository.save(existingRide);
         return mapper.convertToDto(updatedRide, RideResponseDto.class);
@@ -72,7 +85,7 @@ public class RideServiceImpl implements RideService {
     @Override
     public void deleteRide(Long id) {
         Ride ride = rideRepository.findById(id)
-                .orElseThrow(() -> new RideNotFoundException(String.format("Ride not found with id: " + id)));
+                .orElseThrow(() -> new RideNotFoundException("Ride not found with id: " + id));
         rideRepository.delete(ride);
     }
 }
